# OOP_Lab4

./: CMakeLists.txt  README.md  main.cpp
include/: Array.h  Figure.h  Hexagon.h  Pentagon.h  Point.h  Rhombus.h
tests/: tests.cpp
